--- a/index.html
+++ b/index.html
@@ -3,272 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Professional PCB Design Services - From prototyping to production-ready solutions">
-    <title>CircuitCraft Pro | PCB Design Solutions</title>
+    <meta name="description" content="Embedded Systems & Edge AI Engineer - Hardware Design, Firmware Development, and AI Optimization">
+    <title>John Doe | Embedded Systems & Edge AI Engineer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        /* Updated color scheme */
         :root {
-            --primary: #2c3e50;
-            --secondary: #3498db;
-            --accent: #e74c3c;
+            --primary: #1a365d;      /* Dark blue */
+            --secondary: #2d7a9f;    /* Medium blue */
+            --accent: #4CAF50;       /* Green accent for tech/ai */
             --light: #f8f9fa;
             --dark: #212529;
             --transition: all 0.3s ease;
         }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Segoe UI', system-ui, sans-serif;
-        }
-
-        body {
-            line-height: 1.6;
-            color: var(--dark);
-            background-color: var(--light);
-        }
-
-        /* Dark Mode Toggle */
-        .dark-mode {
-            position: fixed;
-            right: 2rem;
-            bottom: 2rem;
-            z-index: 1000;
-            background: var(--primary);
-            color: white;
-            padding: 1rem;
-            border-radius: 50%;
-            cursor: pointer;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        /* Header & Navigation */
-        .header {
-            background: var(--primary);
-            color: white;
-            padding: 1rem;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-
-        .nav {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav a {
-            color: white;
-            text-decoration: none;
-            transition: var(--transition);
-            position: relative;
-        }
-
-        .nav a::after {
-            content: '';
-            position: absolute;
-            width: 0;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background: var(--secondary);
-            transition: var(--transition);
-        }
-
-        .nav a:hover::after {
-            width: 100%;
-        }
-
-        /* Hero Section */
-        .hero {
-            height: 100vh;
-            background: linear-gradient(rgba(0,0,0,0.7), url('https://images.unsplash.com/photo-1628348068343-c6a848d2b6dd?auto=format&fit=crop&w=1920') center/cover;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            color: white;
-            margin-top: 60px;
-            animation: fadeIn 1s ease-in;
-        }
-
-        .hero-content {
-            max-width: 800px;
-            padding: 2rem;
-        }
-
-        .hero h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1.5rem;
-            animation: slideUp 1s ease;
-        }
-
-        /* Features Grid */
-        .features {
+        /* Add skills grid styling */
+        .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1.5rem;
             padding: 4rem 2rem;
             background: white;
         }
 
-        .feature-card {
+        .skill-item {
             text-align: center;
-            padding: 2rem;
-            border-radius: 10px;
+            padding: 1.5rem;
+            background: var(--light);
+            border-radius: 8px;
             transition: var(--transition);
         }
 
-        .feature-card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        .skill-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
 
-        .feature-icon {
-            font-size: 2.5rem;
-            color: var(--secondary);
-            margin-bottom: 1rem;
-        }
-
-        /* Projects Section */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            padding: 4rem 2rem;
-        }
-
-        .project-card {
-            position: relative;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        .project-image {
-            width: 100%;
-            height: 250px;
-            object-fit: cover;
-            transition: var(--transition);
-        }
-
+        /* Updated project overlay */
         .project-overlay {
-            position: absolute;
-            bottom: -100%;
-            left: 0;
-            width: 100%;
-            padding: 2rem;
-            background: rgba(0,0,0,0.8);
-            color: white;
-            transition: var(--transition);
+            background: linear-gradient(135deg, rgba(25,55,100,0.9) 0%, rgba(45,122,159,0.9) 100%);
         }
 
-        .project-card:hover .project-overlay {
-            bottom: 0;
-        }
-
-        /* Testimonials */
-        .testimonials {
-            background: var(--primary);
-            color: white;
-            padding: 4rem 2rem;
-        }
-
-        .testimonial-slider {
-            display: grid;
-            grid-auto-flow: column;
-            gap: 2rem;
-            overflow-x: auto;
-            scroll-snap-type: x mandatory;
+        /* Add certification badges */
+        .certifications {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            flex-wrap: wrap;
             padding: 2rem 0;
         }
 
-        .testimonial-card {
-            background: rgba(255,255,255,0.1);
-            padding: 2rem;
-            border-radius: 10px;
-            min-width: 300px;
-            scroll-snap-align: start;
-        }
-
-        /* Contact Form */
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 2rem;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            transition: var(--transition);
-        }
-
-        input:focus, textarea:focus {
-            border-color: var(--secondary);
-            outline: none;
-            box-shadow: 0 0 0 3px rgba(52,152,219,0.25);
-        }
-
-        /* Animations */
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        @keyframes slideUp {
-            from { transform: translateY(50px); opacity: 0; }
-            to { transform: translateY(0); opacity: 1; }
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            .hero h1 {
-                font-size: 2.5rem;
-            }
-
-            .features {
-                grid-template-columns: 1fr;
-            }
+        .cert-badge {
+            background: var(--accent);
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
-    <!-- Dark Mode Toggle -->
-    <div class="dark-mode" onclick="toggleDarkMode()">
-        <i class="fas fa-moon"></i>
-    </div>
-
     <header class="header">
         <nav class="nav">
-            <h2>CircuitCraft Pro</h2>
+            <h2>John Doe</h2>
             <div class="nav-links">
                 <a href="#home">Home</a>
-                <a href="#services">Services</a>
+                <a href="#skills">Skills</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
@@ -277,130 +77,119 @@
 
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1>Precision PCB Design & Manufacturing</h1>
-            <p>End-to-end solutions for complex circuit board requirements</p>
-            <button class="cta-button">Start Your Project</button>
+            <h1>Embedded Systems & Edge AI Engineer</h1>
+            <p>Designing intelligent hardware solutions at the edge</p>
+            <div class="certifications">
+                <span class="cert-badge">Certified TensorFlow Lite Developer</span>
+                <span class="cert-badge">ARM Certified Embedded Engineer</span>
+                <span class="cert-badge">AWS IoT Specialty</span>
+            </div>
         </div>
     </section>
 
-    <section class="features" id="services">
-        <div class="feature-card">
-            <i class="fas fa-microchip feature-icon"></i>
-            <h3>High-Density Designs</h3>
-            <p>Advanced multi-layer PCB solutions for complex applications</p>
+    <section class="skills-grid" id="skills">
+        <div class="skill-item">
+            <i class="fas fa-microchip"></i>
+            <h3>Embedded C/C++</h3>
+            <p>RTOS, Driver Development, Low-level Optimization</p>
         </div>
-        <div class="feature-card">
-            <i class="fas fa-bolt feature-icon"></i>
-            <h3>Rapid Prototyping</h3>
-            <p>Quick-turn PCB fabrication with 24-hour turnaround option</p>
+        <div class="skill-item">
+            <i class="fas fa-robot"></i>
+            <h3>Edge AI</h3>
+            <p>TFLite, ONNX Runtime, Model Optimization</p>
         </div>
-        <div class="feature-card">
-            <i class="fas fa-check-double feature-icon"></i>
-            <h3>DFM Analysis</h3>
-            <p>Comprehensive design-for-manufacturing checks</p>
+        <div class="skill-item">
+            <i class="fas fa-project-diagram"></i>
+            <h3>Hardware Design</h3>
+            <p>PCB Layout, Signal Integrity, Power Systems</p>
+        </div>
+        <div class="skill-item">
+            <i class="fas fa-cloud"></i>
+            <h3>IoT Systems</h3>
+            <p>LoRaWAN, BLE, MQTT, AWS IoT Core</p>
         </div>
     </section>
 
     <section class="projects-grid" id="projects">
-        <!-- Project cards with hover overlay -->
         <div class="project-card">
-            <img src="pcb1.jpg" alt="IoT Board Design" class="project-image">
+            <img src="edge-ai-device.jpg" alt="Edge AI Device" class="project-image">
             <div class="project-overlay">
-                <h3>Smart Home Controller</h3>
-                <p>4-layer design with wireless connectivity</p>
-                <button>View Case Study</button>
+                <h3>Smart Surveillance Camera</h3>
+                <p>• STM32H7 MCU with TensorFlow Lite<br>
+                   • Custom PCB with power management<br>
+                   • 95% accuracy with 300mW power draw</p>
+                <a href="#" class="project-link">View GitHub Repository</a>
             </div>
         </div>
-        <!-- Add more project cards -->
+        <div class="project-card">
+            <img src="industrial-iot.jpg" alt="Industrial IoT" class="project-image">
+            <div class="project-overlay">
+                <h3>Predictive Maintenance System</h3>
+                <p>• ESP32-based vibration monitoring<br>
+                   • Edge anomaly detection<br>
+                   • LoRaWAN connectivity</p>
+                <a href="#" class="project-link">Case Study</a>
+            </div>
+        </div>
     </section>
 
+    <!-- Updated Testimonials Section -->
     <section class="testimonials">
-        <h2>Client Testimonials</h2>
+        <h2>Collaborations</h2>
         <div class="testimonial-slider">
             <div class="testimonial-card">
-                <p>"Outstanding attention to detail and quick turnaround times."</p>
-                <h4>- Tech Innovations Inc.</h4>
+                <p>"Reduced our edge AI model size by 60% while maintaining accuracy."</p>
+                <h4>- AI Startup CTO</h4>
             </div>
-            <!-- Add more testimonials -->
+            <div class="testimonial-card">
+                <p>"Implemented power saving features extending battery life by 3x."</p>
+                <h4>- IoT Device Manufacturer</h4>
+            </div>
         </div>
     </section>
 
-    <section class="contact-form" id="contact">
-        <h2>Get in Touch</h2>
-        <form action="https://formspree.io/f/your-form-id" method="POST">
-            <div class="form-group">
-                <input type="text" name="name" placeholder="Name" required>
-            </div>
-            <div class="form-group">
-                <input type="email" name="email" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-                <textarea name="message" placeholder="Project Details" rows="5" required></textarea>
-            </div>
-            <button type="submit">Send Inquiry</button>
-        </form>
-    </section>
-
+    <!-- Updated Footer with Technical Profiles -->
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h4>Contact</h4>
-                <p>Email: contact@circuitcraft.com</p>
-                <p>Phone: (555) 123-4567</p>
+                <h4>Technical Profiles</h4>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-github"></i> GitHub</a>
+                    <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+                    <a href="#"><i class="fab fa-kaggle"></i> Kaggle</a>
+                </div>
             </div>
             <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                </div>
+                <h4>Resources</h4>
+                <a href="#">Blog</a>
+                <a href="#">Open Source Projects</a>
+                <a href="#">Design Patterns</a>
             </div>
         </div>
     </footer>
 
     <script>
-        // Dark Mode Toggle
-        function toggleDarkMode() {
-            document.body.classList.toggle('dark-mode');
-            const icon = document.querySelector('.dark-mode i');
-            icon.classList.toggle('fa-moon');
-            icon.classList.toggle('fa-sun');
+        // Add Intersection Observer for skill items
+        document.querySelectorAll('.skill-item').forEach((el) => {
+            el.style.opacity = 0;
+            el.style.transform = 'translateY(30px)';
+            observer.observe(el);
+        });
+
+        // Project filter functionality
+        function filterProjects(category) {
+            document.querySelectorAll('.project-card').forEach(project => {
+                project.style.display = 
+                    category === 'all' || project.dataset.category === category 
+                    ? 'block' : 'none';
+            });
         }
 
-        // Smooth Scroll
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Form Submission
-        const form = document.querySelector('form');
+        // Fix form submission message
         form.addEventListener('submit', (e) => {
             e.preventDefault();
-            // Add your form submission logic here
-            alert('Thank you for your message! We'll respond within 24 hours.');
+            alert('Thank you for your message! We\'ll respond within 24 hours.');
             form.reset();
-        });
-
-        // Scroll Animations
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = 1;
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        });
-
-        document.querySelectorAll('.feature-card, .project-card').forEach((el) => {
-            el.style.opacity = 0;
-            el.style.transform = 'translateY(50px)';
-            observer.observe(el);
         });
     </script>
 </body>
